<resources>
    <string name="app_name" translatable="false">Phoenix</string>
    <string name="icon" translatable="false">Icon</string>
    <string name="list_app_name">Application name</string>
    <string name="rebootDay">Reboot interval</string>
    <string name="rebootTime">Reboot time</string>
    <string name="installedApps">Autostart App selection</string>
    <string name="curr_settings">Current selection</string>
    <string name="default0" translatable="false">0</string>
    <string name="error_txt">Error</string>
    <string name="miss_app_txt">Please select an application for automatic start after
        reboot!</string>
    <string name="miss_int_txt">Please select an interval for the reboot!</string>
    <string name="miss_time_txt">Please select a time for the reboot!</string>
    <string name="autoStart">Start an app after reboot</string>
    <string name="softReboot" translatable="false">Soft/Hot reboot?</string>
    <string name="currAppTxt" translatable="false">App:</string>
    <string name="currDayTxt" translatable="false">Reboot</string>
    <string name="otherSettings">Other settings</string>
    <string name="testReboot" translatable="false">Test reboot function</string>
    <string name="testRebootButtonText" translatable="false">REBOOT</string>
    <string name="close_txt">Close</string>
    <string name="apply_dialog1">will reboot</string>
    <string name="apply_dialog2">and start the app</string>
    <string name="cancel_dialog">No data changed.</string>
    <string name="clear_dialog">All stored settings are cleared. Auto reboot is disabled.</string>
    <string name="alertReset">Test of reboot function. CAUTION!!! If you press OK your device will do a reset!</string>
    <string name="alertResetTitle">CAUTION!!!</string>

    <string-array name="intervals">
        <item>every day</item>
        <item>every 2 days</item>
        <item>every 3 days</item>
        <item>every 4 days</item>
        <item>every 5 days</item>
        <item>every 6 days</item>
        <item>every week</item>
        <item>every 8 days</item>
        <item>every 9 days</item>
        <item>every 10 days</item>
        <item>every 11 days</item>
        <item>every 12 days</item>
        <item>every 13 days</item>
        <item>every 2 weeks</item>
        <item>every 15 days</item>
        <item>every 16 days</item>
        <item>every 17 days</item>
        <item>every 18 days</item>
        <item>every 19 days</item>
        <item>every 20 days</item>
        <item>every 3 weeks</item>
        <item>every 22 days</item>
        <item>every 23 days</item>
        <item>every 24 days</item>
        <item>every 25 days</item>
        <item>every 26 days</item>
        <item>every 27 days</item>
        <item>every 4 weeks</item>
        <item>every 29 days</item>
        <item>every 30 days</item>
    </string-array>

    <string-array name="times">
        <item>at 1 o\'clock</item>
        <item>at 2 o\'clock</item>
        <item>at 3 o\'clock</item>
        <item>at 4 o\'clock</item>
        <item>at 5 o\'clock</item>
        <item>at 6 o\'clock</item>
        <item>at 7 o\'clock</item>
        <item>at 8 o\'clock</item>
        <item>at 9 o\'clock</item>
        <item>at 10 o\'clock</item>
        <item>at 11 o\'clock</item>
        <item>at 12 o\'clock</item>
        <item>at 13 o\'clock</item>
        <item>at 14 o\'clock</item>
        <item>at 15 o\'clock</item>
        <item>at 16 o\'clock</item>
        <item>at 17 o\'clock</item>
        <item>at 18 o\'clock</item>
        <item>at 19 o\'clock</item>
        <item>at 20 o\'clock</item>
        <item>at 21 o\'clock</item>
        <item>at 22 o\'clock</item>
        <item>at 23 o\'clock</item>
        <item>at midnight</item>
    </string-array>

    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-7770590286348676/8754806948</string>
    <string name="banner_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

</resources>
