<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                                   android:id="@+id/toolbar"
                                   android:layout_width="match_parent"
                                   android:layout_height="wrap_content"
                                   android:background="@color/holo_orange_light">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:id="@+id/rl_buttons">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currAppTxt"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/tv_currAppTxt"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/app_name"
                android:id="@+id/tv_currApp"
                android:layout_toRightOf="@id/tv_currAppTxt"
                android:layout_toEndOf="@id/tv_currAppTxt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currDayTxt"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:id="@+id/tv_currDayTxt"
                android:layout_below="@+id/tv_currAppTxt"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/default0"
                android:id="@+id/tv_currInterval"
                android:layout_below="@+id/tv_currApp"
                android:layout_toRightOf="@id/tv_currDayTxt"
                android:layout_toEndOf="@id/tv_currDayTxt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/default0"
                android:id="@+id/tv_currTime"
                android:layout_toEndOf="@+id/tv_currInterval"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/tv_currDayTxt"
                android:layout_alignParentStart="true"/>

        </RelativeLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:id="@+id/b_clear"
            android:layout_column="2"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/clear_s"
            android:background="@android:color/transparent"
            android:contentDescription="@string/curr_settings"
            android:layout_gravity="center_vertical"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:id="@+id/b_cancel"
            android:layout_column="3"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/cancel_s"
            android:background="@android:color/transparent"
            android:contentDescription="@string/curr_settings"
            android:layout_gravity="center_vertical"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/b_apply"
            android:layout_column="4"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ok_s"
            android:background="@android:color/transparent"
            android:contentDescription="@string/curr_settings"
            android:layout_gravity="center_vertical"/>

    </GridLayout>

</android.support.v7.widget.Toolbar>