<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/main_Layout"
                tools:context=".AutoReboot"
                android:background="@drawable/phoenix">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rebootDay"
        android:textAppearance="@android:style/TextAppearance.Large"

        android:id="@+id/tv_rebootDay"
        android:background="@color/transparent_grey"/>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/lv_rebootDay"
        android:choiceMode="singleChoice"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rebootTimer"
        android:textAppearance="@android:style/TextAppearance.Large"

        android:id="@+id/tv_rebootTimer"
        android:background="@color/transparent_grey"/>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/lv_rebootTimer"
        android:choiceMode="singleChoice"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:paddingBottom="5dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/installedApps"
        android:textAppearance="@android:style/TextAppearance.Large"

        android:id="@+id/tv_installedApps"
        android:background="@color/transparent_grey"/>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:id="@+id/lv_installedApps"
        android:choiceMode="singleChoice"
        android:layout_weight="5"
        android:fadeScrollbars="false"
        android:paddingBottom="5dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rl_buttons">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:id="@+id/b_clear"
            android:layout_toStartOf="@+id/b_cancel"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/clear"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="false"
            android:layout_alignBottom="@+id/tv_currTime"
            android:contentDescription="@string/curr_settings"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:id="@+id/b_cancel"
            android:layout_toStartOf="@+id/b_apply"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/cancel"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="false"
            android:layout_alignBottom="@+id/tv_currTime"
            android:contentDescription="@string/curr_settings"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/ok"
            android:id="@+id/b_apply"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ok"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="false"
            android:layout_alignBottom="@+id/tv_currTime"
            android:contentDescription="@string/curr_settings"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/curr_settings"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            style="@android:style/TextAppearance.Small.Inverse"
            android:background="@color/transparent_grey"
            android:paddingEnd="20dp"
            android:paddingStart="20sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/app_name"
            android:id="@+id/tv_currApp"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/default0"
            android:id="@+id/tv_currInterval"
            android:layout_below="@+id/tv_currApp"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/default0"
            android:id="@+id/tv_currTime"
            android:layout_alignParentStart="false"
            android:layout_toEndOf="@+id/tv_currInterval"
            android:layout_below="@+id/tv_currApp"
            android:layout_marginStart="5dp"/>

    </RelativeLayout>

</LinearLayout>
